--- a/ToolBar_APP/AndroidManifest.xml
+++ b/ToolBar_APP/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
 
     <application
+        android:name="com.huawei.toolbar.ToolbarApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
