--- a/ToolBar_APP/AndroidManifest.xml
+++ b/ToolBar_APP/AndroidManifest.xml
@@ -13,7 +13,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
-    <uses-permission android:name="android.hardware.sensor.accelerometer" />
 
     <application
         android:name="com.huawei.toolbar.ToolbarApplication"
@@ -22,17 +21,13 @@
         android:label="@string/app_name" >
         <activity
             android:name="com.huawei.toolbar.ui.activity.MainActivity"
-            android:label="@string/app_name"
-             >
+            android:configChanges="orientation"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.huawei.toolbar.ui.activity.SubMainActivity"
-            android:label="@string/app_name" >
         </activity>
 
         <service
