--- a/ToolBar_APP/AndroidManifest.xml
+++ b/ToolBar_APP/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:name="com.huawei.toolbar.ToolbarApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
         <activity
             android:name="com.huawei.toolbar.ui.activity.MainActivity"
             android:configChanges="orientation"
